# llm-chatbot

./: .gitignore  README.md  index.html  list.md  task1.md  taskui.md
aiAgentBackend/: package-lock.json  package.json  vercel.json
aiAgentBackend/src/: llm.js  ragIngest.js  ragQuery.js  server.js  vector.js
chatbot-backend/: .gitignore  README.md  get_chunks.py  main.py  pyproject.toml  test.py
chatbot-backend/app/: chat.py  config.py  ingest.py  llm.py  main.py  qdrant.py  schemas.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: chat-widget.js  chat-widget.js.map  widget-demo.html
frontend/scripts/: build-widget.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/chatbot-builder/: page.tsx
frontend/src/app/chatbot/[id]/: page.tsx
frontend/src/components/: Navbar.tsx  app-sidebar.tsx  login-form.tsx  site-header.tsx
frontend/src/components/chat-builder/: ChatPanel.tsx  LeftPanel.tsx  RightPanel.tsx
frontend/src/components/standalone/: ChatBotAvatar.tsx  ChatPanelStandalone.tsx  index.tsx
frontend/src/lib/: AuthContext.tsx  auth.ts  storage.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/waitlist/: route.ts
src/lib/: db.ts
