[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "llama-index>=0.14.15",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-vector-stores-qdrant>=0.9.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.0",
    "uvicorn>=0.41.0",
    "langchain>=0.4.0",
    "langchain-cerebras>=0.1.0",
    "langchain-groq>=0.2.0",
]
